--- a/1. feladat_honlap.html
+++ b/1. feladat_honlap.html
@@ -17,5 +17,13 @@
     <h2><a target="blank" href="1. feladat_etlap.html">Étlap</a></h2>
     <h2><a target="blank" href="1. feladat_akciók.html">Akciók</a></h2>
     <h2><a target="blank" href="1. feladat_elérhetőségek.html">Elérhetőségek</a></h2>
+
+    <table>
+        <tfoot>
+            <tr>
+                <td>&copy; BurgerBar 2020</td>
+            </tr>
+        </tfoot>
+    </table>
 </body>
 </html>
